# homfa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sh  bench_ltl.sh  test.sh  test_benchmark.sh  test_homfa.sh  toolbox.sh
src/: CMakeLists.txt  archive.hpp  backstream_dfa_runner.cpp  backstream_dfa_runner.hpp  benchmark.cpp  counter.cpp  dfa.cpp  dfa.hpp  error.hpp  graph.cpp  graph.hpp  main.cpp  offline_dfa.cpp  offline_dfa.hpp  online_dfa.cpp  online_dfa.hpp  test0.cpp  test_crypto_random.cpp  test_plain_random.cpp  tfhepp_util.cpp  tfhepp_util.hpp  timeit.cpp  timeit.hpp  util.cpp  utility.hpp
test/: 01-01.in  01-02.in  01-03.in  01-04.in  01-05.in  01-06.in  01.spec  01_rev.spec  02.spec  03-03.in  03-05.in  03-06.in  03.spec  04.spec  05.spec  06.spec  07.spec  08.spec  09.spec  10-01.in  10-02.in  10-03.in  10.spec  bench-1024.spec  bench-1200.in  bench-128.spec  bench-2400.in  bench-256.spec  bench-3600.in  bench-4800.in  bench-512.spec  bench-64.spec  bench-8192.in  safety_ltl_5ap.txt
